# spirit-island-chatbot

./: pyproject.toml
notebooks/: 01_get_data.ipynb
scripts/: __init__.py  scraping.py
